--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==2.0.3
-scipy==1.11.1
-streamlit==1.25.0
+pandas==2.1.4
+scipy==1.11.4
+streamlit==1.35.0
 altair==5.0.1
-plotly==5.15.0
-plotly_express==0.4.1
+plotly==5.22.0
+plotly_express
